...
            </objects>
            <point key="canvasLocation" x="376.81159420289856" y="-468.08035714285711"/>
        </scene>
        <!--Search-->
        <scene sceneID="wYZ-8B-KZZ">
            <objects>
                <tableViewController id="vwb-KA-DcA" userLabel="Search" customClass="SearchTableViewController" customModule="LegoIos" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="7cT-TT-Eev">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <view key="tableHeaderView" contentMode="scaleToFill" id="8O4-y0-wx9" userLabel="Search Bar">
                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
...
                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                    <textInputTraits key="textInputTraits" returnKeyType="search"/>
                                </textField>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ljr-QM-Ykr">
                                    <rect key="frame" x="351" y="7" width="48" height="30"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                    <state key="normal" title="Cancel"/>
                                    <state key="disabled">
                                        <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    </state>
                                    <connections>
                                        <action selector="searchCanceled:" destination="vwb-KA-DcA" eventType="touchUpInside" id="xfZ-9c-EGk"/>
                                    </connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="vwb-KA-DcA" id="NTh-W9-IGj"/>
                            <outlet property="delegate" destination="vwb-KA-DcA" id="azW-RO-4p1"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="" image="magnifyingglass" catalog="system" id="Ayi-3J-0My"/>
                    <connections>
                        <outlet property="cancelButton" destination="ljr-QM-Ykr" id="AKY-wA-T9R"/>
                        <outlet property="searchTextField" destination="8Ve-7Q-Sgg" id="bI5-c8-NQw"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KQM-y9-uNn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
